--- a/reset.html
+++ b/reset.html
@@ -101,7 +101,7 @@
         .then(data => {
           if (data.success) {
             alert("✅ تم تحديث كلمة المرور بنجاح");
-            location.href = "login.html";
+            location.href = "Login-Course.html";
           } else {
             alert("❌ كود غير صحيح أو منتهي الصلاحية");
           }
