--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 
   <script>
     // تكوين Google Apps Script
-    const API_URL = 'https://script.google.com/macros/s/AKfycbxjzYkUaCWkOmn8hhr3fO-F_SEGlqmjVRNxWTnqFo96nyRlgVrRaW-S41vNKs11VejM9g/exec';
+    const API_URL = 'https://script.google.com/macros/s/AKfycbxIt0E44kK1vrkMfMug-HiB5ovU4oBMyb_ZsKgipty5ATf-yHfXWmA_2KpfJ_YxHMpvTQ/exec';
     
     // دالة تسجيل الدخول
     async function login(email, password) {
@@ -132,6 +132,7 @@
         
         const response = await fetch(`${API_URL}?action=login`, {
           method: 'POST',
+          mode: 'no-cors', // أضف هذا السطر
           body: JSON.stringify({ email, password }),
           headers: { 'Content-Type': 'application/json' }
         });
