--- a/index.html
+++ b/index.html
@@ -223,5 +223,6 @@ window.addEventListener('load', function() {
     window.location.href = 'http://course.najyacademia.com/';
   }
 });
+    </script>
 </body>
 </html>
