--- a/index.html
+++ b/index.html
@@ -119,6 +119,7 @@
   </div>
 
   <script>
+    const API_URL = 'https://script.google.com/macros/s/AKfycbxIt0E44kK1vrkMfMug-HiB5ovU4oBMyb_ZsKgipty5ATf-yHfXWmA_2KpfJ_YxHMpvTQ/exec';
  // دالة تسجيل الدخول المحسنة
 async function login(email, password) {
   const submitBtn = document.querySelector('#loginForm button');
